# blacklistegnie_Clion

./: .gitignore  CMakeLists.txt  README.md  database.cpp  database.h  engine.cpp  engine.h  enginehandler.cpp  enginehandler.h  handler.cpp  handler.h  jsonfu.cpp  jsonfu.h  jsonhelper.cpp  jsonhelper.h  main.cpp  utils.cpp  utils.h
